# AIONBD

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
bench/: Cargo.toml
core/: Cargo.toml
docs/: README.md  architecture.md  baseline_refresh_runbook.md  cloud_operations_guide.md  development.md  operations_observability.md  optimizations_and_benchmarks.md  packaging_and_distribution.md  performance_tuning.md  platform_guide.md  production_sizing.md  security_notes.md  soak_runbook.md  whitepaper.md
scripts/: check_alert_runbook_sync.py  check_backup_restore_smoke.py  check_chaos_pipeline_smoke.py  check_collection_export_import_smoke.py  check_file_sizes.allowlist  check_file_sizes.sh  check_refresh_report_baselines_smoke.py  check_report_regressions_smoke.py  check_soak_harness_smoke.py  (+22 more)
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/aionbd/: __init__.py  _parsers.py  client.py  errors.py  models.py
sdk/python/tests/: test_client.py
sdk/rust/: CHANGELOG.md  Cargo.toml  README.md
sdk/rust/src/: lib.rs
server/: Cargo.toml
server/src/: auth.rs  config.rs  engine_guard.rs  env_utils.rs  errors.rs  handler_utils.rs  handlers.rs  handlers_health.rs  handlers_metrics.rs  handlers_points.rs  handlers_search.rs  http_metrics.rs  index_manager.rs  ivf_index.rs  main.rs  models.rs  persistence.rs  persistence_backlog.rs  persistence_queue.rs  prometheus_exporter.rs  resource_manager.rs  state.rs  tenant_quota.rs  tests.rs  tls.rs  write_path.rs
server/src/auth/: env.rs  jwt.rs  rate_limit.rs
server/src/handlers_metrics/: prometheus.rs
server/src/handlers_search/: engine.rs  engine_batch.rs  engine_batch_exact.rs  engine_batch_exact_transposed.rs  filter.rs  scoring.rs
server/src/index_manager/: settings.rs
server/src/ivf_index/: tests.rs
server/src/persistence/: settings.rs
server/src/tests/: auth_isolation.rs  auth_jwt.rs  auth_quotas.rs  checkpointing.rs  collection_deletion.rs  engine_guard.rs  filtering.rs  http_metrics.rs  index_build_cooldown.rs  index_cache.rs  limits.rs  limits_locking.rs  list_points.rs  list_points_offset.rs  metrics.rs  metrics_backlog.rs  metrics_prometheus.rs  payload_mutations.rs  persistence.rs  persistence_chaos.rs  persistence_degraded.rs  persistence_metrics.rs  persistence_rollbacks.rs  persistence_sync_mode.rs  points_batch.rs  points_count.rs  runtime_maps_metrics.rs  search.rs  search_advanced.rs  search_recall.rs
(+70 files in other folders)
