[package]
name = "aionbd-server"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
description = "HTTP API skeleton for AIONBD."

[dependencies]
aionbd-core = { path = "../core" }
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.5", features = ["limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
