[package]
name = "aionbd-sdk-rust"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
description = "Official Rust SDK for the AIONBD HTTP API."
readme = "README.md"
repository = "https://github.com/ayoubnabil/AIONBD"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[workspace]
